outline object using stencil buffer

--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -172,6 +172,7 @@
     <None Include="res\shaders\basic.fs" />
     <None Include="res\shaders\basic.vs" />
     <None Include="res\shaders\light.fs" />
+    <None Include="res\shaders\outline.fs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
