--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -173,6 +173,8 @@
     <None Include="res\shaders\basic.vs" />
     <None Include="res\shaders\light.fs" />
     <None Include="res\shaders\outline.fs" />
+    <None Include="res\shaders\screen.fs" />
+    <None Include="res\shaders\screen.vs" />
     <None Include="res\shaders\transparent.fs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
