--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -54,5 +54,7 @@
     <None Include="res\shaders\light.fs" />
     <None Include="res\shaders\outline.fs" />
     <None Include="res\shaders\transparent.fs" />
+    <None Include="res\shaders\screen.vs" />
+    <None Include="res\shaders\screen.fs" />
   </ItemGroup>
 </Project>
