--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -175,6 +175,9 @@
     <None Include="res\shaders\explode.gs" />
     <None Include="res\shaders\explode.vs" />
     <None Include="res\shaders\light.fs" />
+    <None Include="res\shaders\normal_visualize.fs" />
+    <None Include="res\shaders\normal_visualize.gs" />
+    <None Include="res\shaders\normal_visualize.vs" />
     <None Include="res\shaders\outline.fs" />
     <None Include="res\shaders\screen.fs" />
     <None Include="res\shaders\screen.vs" />
