--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\RenderFeatures\GeometryShader.cpp" />
+    <ClCompile Include="src\RenderFeatures\Skybox.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\glad.c" />
@@ -170,6 +171,7 @@
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\RenderFeatures\GeometryShader.h" />
     <ClInclude Include="src\RenderFeatures\RenderFeature.h" />
+    <ClInclude Include="src\RenderFeatures\Skybox.h" />
     <ClInclude Include="src\Shader.h" />
   </ItemGroup>
   <ItemGroup>
