--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -160,6 +160,8 @@
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\RenderFeatures\Blend.cpp" />
     <ClCompile Include="src\RenderFeatures\GeometryShader.cpp" />
+    <ClCompile Include="src\RenderFeatures\Light.cpp" />
+    <ClCompile Include="src\RenderFeatures\RenderFeature.cpp" />
     <ClCompile Include="src\RenderFeatures\Skybox.cpp" />
     <ClCompile Include="src\Shader.cpp" />
     <ClCompile Include="src\Application.cpp" />
@@ -172,6 +174,7 @@
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\RenderFeatures\Blend.h" />
     <ClInclude Include="src\RenderFeatures\GeometryShader.h" />
+    <ClInclude Include="src\RenderFeatures\Light.h" />
     <ClInclude Include="src\RenderFeatures\RenderFeature.h" />
     <ClInclude Include="src\RenderFeatures\Skybox.h" />
     <ClInclude Include="src\Shader.h" />
