--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\RenderFeatures\FrameBuffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\RenderFeatures\Instance.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Shader.h">
@@ -86,6 +89,9 @@
     <ClInclude Include="src\RenderFeatures\FrameBuffer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\RenderFeatures\Instance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\transparent.fs" />
@@ -104,5 +110,6 @@
     <None Include="res\shaders\light_combination.vs" />
     <None Include="res\shaders\basic.vs" />
     <None Include="res\shaders\basic.fs" />
+    <None Include="res\shaders\asteroids.vs" />
   </ItemGroup>
 </Project>
