--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
+    <ClCompile Include="src\RenderFeatures\AntiAliasing.cpp" />
     <ClCompile Include="src\RenderFeatures\Blend.cpp" />
     <ClCompile Include="src\RenderFeatures\FrameBuffer.cpp" />
     <ClCompile Include="src\RenderFeatures\GeometryShader.cpp" />
@@ -174,6 +175,7 @@
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\Model.h" />
+    <ClInclude Include="src\RenderFeatures\AntiAliasing.h" />
     <ClInclude Include="src\RenderFeatures\Blend.h" />
     <ClInclude Include="src\RenderFeatures\FrameBuffer.h" />
     <ClInclude Include="src\RenderFeatures\GeometryShader.h" />
