--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="src\RenderFeatures\AntiAliasing.cpp" />
     <ClCompile Include="src\RenderFeatures\Blend.cpp" />
     <ClCompile Include="src\RenderFeatures\FrameBuffer.cpp" />
+    <ClCompile Include="src\RenderFeatures\GammaCorrection.cpp" />
     <ClCompile Include="src\RenderFeatures\GeometryShader.cpp" />
     <ClCompile Include="src\RenderFeatures\Instance.cpp" />
     <ClCompile Include="src\RenderFeatures\Light.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="src\RenderFeatures\AntiAliasing.h" />
     <ClInclude Include="src\RenderFeatures\Blend.h" />
     <ClInclude Include="src\RenderFeatures\FrameBuffer.h" />
+    <ClInclude Include="src\RenderFeatures\GammaCorrection.h" />
     <ClInclude Include="src\RenderFeatures\GeometryShader.h" />
     <ClInclude Include="src\RenderFeatures\Instance.h" />
     <ClInclude Include="src\RenderFeatures\Light.h" />
@@ -191,6 +193,7 @@
     <None Include="res\shaders\asteroids.vs" />
     <None Include="res\shaders\basic.fs" />
     <None Include="res\shaders\basic.vs" />
+    <None Include="res\shaders\gamma_correction.fs" />
     <None Include="res\shaders\light_combination.fs" />
     <None Include="res\shaders\light_combination.vs" />
     <None Include="res\shaders\explode.fs" />
