--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\RenderFeatures\PointShadow.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\Model.cpp" />
@@ -174,6 +175,7 @@
     <ClCompile Include="src\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\RenderFeatures\PointShadow.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Mesh.h" />
@@ -209,6 +211,11 @@
     <None Include="res\shaders\normal_visualize.fs" />
     <None Include="res\shaders\normal_visualize.gs" />
     <None Include="res\shaders\normal_visualize.vs" />
+    <None Include="res\shaders\point_shadow.fs" />
+    <None Include="res\shaders\point_shadow.vs" />
+    <None Include="res\shaders\point_shadow_depth.fs" />
+    <None Include="res\shaders\point_shadow_depth.gs" />
+    <None Include="res\shaders\point_shadow_depth.vs" />
     <None Include="res\shaders\screen.fs" />
     <None Include="res\shaders\screen.vs" />
     <None Include="res\shaders\shadow.fs" />
