--- a/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\RenderFeatures\ShadowMap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\RenderFeatures\PointShadow.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Shader.h">
@@ -116,6 +119,9 @@
     <ClInclude Include="src\RenderFeatures\ShadowMap.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="src\RenderFeatures\PointShadow.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\transparent.fs" />
@@ -142,5 +148,10 @@
     <None Include="res\shaders\shadow.fs" />
     <None Include="res\shaders\depth_map_debug.vs" />
     <None Include="res\shaders\depth_map_debug.fs" />
+    <None Include="res\shaders\point_shadow_depth.vs" />
+    <None Include="res\shaders\point_shadow_depth.gs" />
+    <None Include="res\shaders\point_shadow_depth.fs" />
+    <None Include="res\shaders\point_shadow.vs" />
+    <None Include="res\shaders\point_shadow.fs" />
   </ItemGroup>
 </Project>
